@startuml
class Empleado{
    - nombre : String

    + getNombre() : String
}

class Proyecto{
    - nombre : String

    + getNombre() : String
}

class Asignacion{
    - empleados : List<Empleado>
    - proyectos : List<Proyecto>

    + agregarEmpleado(Empleado empleado) : void
    + agregarProyecto(Proyecto proyecto) : void
    + mostrarEmpleados() : void
    + mostrarProyectos() : void
    + mostrarAsignaciones() : void
}

Empleado "1" --o "*" Asignacion : participa
Proyecto "1" --o "*" Asignacion : asignado a
@enduml
